--- a/telaPrincipal/telaPrincipal.css
+++ b/telaPrincipal/telaPrincipal.css
@@ -16,6 +16,7 @@ body {
   width: 100%;
 }
 
+/* SEPARAÇÃO LATERAL ESQUERDA */
 .sidebar {
   width: 250px;
   background-color: #f1f1f1;
@@ -25,11 +26,13 @@ body {
   justify-content: space-between;
 }
 
+/* APRESENTAÇÃO DO USUÁRIO */
 .user-info {
   margin-top: 8px;
   margin-bottom: 20px;
 }
 
+/* configurações de design */
 .user-info span {
   font-weight: bold;
   font-size: 20px;
@@ -37,6 +40,7 @@ body {
   color: #444;
 }
 
+/* ABA DE BUSCA */
 .search {
   padding: 8px;
   border-radius: 20px;
@@ -46,11 +50,13 @@ body {
   color: #444;
 }
 
+/* MENUS LATERAL ESQUERDA */
 .menu .section {
   margin-bottom: 20px;
   margin-left: 6px;
 }
 
+/* configurações de design e funcionamento */
 .title {
   font-weight: bold;
   color: #ee840c;
@@ -59,14 +65,17 @@ body {
   margin-bottom: 5px;
 }
 
+/* lista abre e fecha */
 .submenu {
   padding-left: 10px;
 }
 
+/* faz a lista de anotações e/ou cadernos desaparecerem */
 .hidden {
   display: none;
 }
 
+/* botão que cria anotação e caderno */
 .action {
   background: none;
   border: none;
@@ -76,28 +85,47 @@ body {
   text-align: left;
 }
 
-ul {
+/* lista toggle incompleta  */
+.incompleto {
+  overflow: hidden;
   list-style: none;
   padding-left: 15px;
 }
 
-ul li {
+/* elementos da lista toggle incompleta */
+.incompleto li {
   margin: 3px 0;
   font-size: 14px;
   color: #444;
 }
 
+/* lista toggle completa  */
+.completo {
+  display: none;
+}
+
+/* elementos da lista toggle completa */
+.completo li {
+  margin: 3px 0;
+  font-size: 14px;
+  color: #444;
+}
+
+/* botão ver mais */
 .vermais {
   font-size: 12px;
+  font-weight: normal;
   color: #666;
   margin-top: 5px;
   display: block;
 }
 
+/* BOTÃO DE SAIR*/
 footer {
   margin-top: auto;
 }
 
+/* configurações de design */
 .logout-btn {
   background-color: #e74c3c;
   color: white;
@@ -109,10 +137,12 @@ footer {
   transition: background-color 0.2s;
 }
 
+/* configurações de design */
 .logout-btn:hover {
   background-color: #c0392b;
 }
 
+/* LOGO NO CENTRO */
 .main-content {
   flex: 1;
   display: flex;
@@ -120,6 +150,7 @@ footer {
   justify-content: center;
 }
 
+/* design e posição da logo */
 .logo {
   text-align: center;
   font-size: 36px;
@@ -127,6 +158,47 @@ footer {
   color: #333;
 }
 
+/* design e posição da logo */
 .plus {
   color: #467dff;
+}
+
+/* MENU LATERAL DIREITA */
+button {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 6px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+/* ícone do menu */
+#menu-toggle {
+  align-self: baseline;
+  font-size: 30px;
+  margin-top: 16px;
+  margin-left: 60px;
+  margin-right: 24px;
+  background-color: white;
+}
+
+/* lista toggle */
+#menutoggle ul {
+  display: none;
+  text-align: left;
+  position: absolute;
+}
+
+/* elementos da lista toggle */
+#menutoggle ul li {
+  border: 1px solid #979797;
+  padding: 10px 40px 10px 8px;
+  margin: 0;
+
+}
+
+/* configurações de design do link na lista toggle */
+#menutoggle a {
+  text-decoration: none; 
+  color: black; 
 }
