--- a/formularios/formularios.css
+++ b/formularios/formularios.css
@@ -95,7 +95,7 @@ button {
 }
 
 .criar:hover {
-  background-color: #074c84;
+  background-color: #e47f0b;
 }
 
 .login {
@@ -105,7 +105,7 @@ button {
 }
 
 .login:hover {
-  background-color: #fc8c0c;
+  background-color: #064170;
 }
 
 .alternativa {
