Mudanças nos botões

--- a/anotacao/anotacao.css
+++ b/anotacao/anotacao.css
@@ -142,18 +142,64 @@ footer {
   background-color: #c0392b;
 }
 
-/*
-.main-content {
-  
-}
-*/
-
 .main-content h1 {
     padding: 20px;
-    margin: 12px 10px 10px 25px;
+    margin: 10px 10px 10px 25px;
 } 
 
-/* MENU LATERAL DIREITA */
+/* POP-UP CRIAR CADERNO */
+.form-containerA { 
+  display: none;
+  position: absolute;
+  top: 30%;
+  left: 38%;
+  padding: 20px;
+}
+
+/* POP-UP CRIAR ANOTAÇÃO */
+.form-containerC {
+  display: none;
+  position: absolute;
+  top: 30%;
+  left: 38%;
+  padding: 20px;
+}
+
+/* configurações de design do pop-up */
+.form-box {
+  background-color: #ffffff;
+  padding: 40px;
+  border-radius: 8px;
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.06);
+  width: 700px;
+}
+
+/* configurações de design do pop-up */
+.nomeCaderno {
+  outline: none;
+  font-size: x-large;
+  font-weight: bold;
+  padding: 8px;
+  border-radius: 20px;
+  border: 1px solid #ffffff;
+  margin-bottom: 20px;
+  width: 100%;
+  color: #444;
+}
+
+/* configurações de design do pop-up */
+.nomeAnotacao {
+  outline: none;
+  font-size: x-large;
+  font-weight: bold;
+  padding: 8px;
+  border-radius: 20px;
+  border: 1px solid #ffffff;
+  margin-bottom: 20px;
+  width: 100%;
+  color: #444;
+}
+
 button {
   padding: 10px 20px;
   border: none;
@@ -162,37 +208,28 @@ button {
   cursor: pointer;
 }
 
-/* ícone do menu */
-#menu-toggle {
-  position: absolute;
-  right: 0;
-  top: 0;
-  font-size: 30px;
-  margin-top: 16px;
-  margin-left: 60px;
-  margin-right: 24px;
-  background-color: white;
+/* configurações de design dos botões */
+.buttons2 {
+  display: inline-block;
+  margin-top: 20px;
 }
 
-/* lista toggle */
-#menutoggle ul {
-  display: none;
-  list-style: none;
-  text-align: left;
-  right: 44px;
-  top: 76px;
-  position: absolute;
+/* configurações de design do botão cancelar */
+.criar {
+  margin: 8px;
+  margin-left: 410px;
+  background-color:  #467dff;
+  color: white;
 }
 
-/* elementos da lista toggle */
-#menutoggle ul li {
-  border: 1px solid #979797;
-  padding: 10px 40px 10px 8px;
-  margin: 0;
+/* configurações de design do botão criar */
+.cancelar {
+  margin: 8px;
+  background-color:  #467dff;
+  color: white;
 }
 
-/* configurações de design do link na lista toggle */
-#menutoggle a {
-  text-decoration: none; 
-  color: black; 
+/* configurações de design dos botões */
+.criar:hover, .cancelar:hover {
+  background-color: #2c62e0;
 }
