--- a/caderno/caderno.css
+++ b/caderno/caderno.css
@@ -13,7 +13,6 @@ body {
 
 .container {
   display: flex;
-  width: 100%;
 }
 
 /* SEPARAÇÃO LATERAL ESQUERDA */
@@ -144,12 +143,13 @@ footer {
 }
 
 .main-content h1 {
-    padding: 20px;
-    margin: 10px 10px 10px 25px;
-} 
+  display: none;
+  padding: 20px;
+  margin: 10px 10px 10px 25px;
+}
 
 /* POP-UP CRIAR CADERNO */
-.form-containerA { 
+.form-containerA {
   display: none;
   position: absolute;
   top: 30%;
@@ -219,19 +219,21 @@ button {
 .criar {
   margin: 8px;
   margin-left: 410px;
-  background-color:  #467dff;
+  background-color: #467dff;
   color: white;
 }
 
 /* configurações de design do botão criar */
 .cancelar {
   margin: 8px;
-  background-color:  #467dff;
+  background-color: #467dff;
   color: white;
 }
 
 /* configurações de design dos botões */
-.criar:hover, .cancelar:hover, .salvar:hover {
+.criar:hover,
+.cancelar:hover,
+.salvar:hover {
   background-color: #2c62e0;
 }
 
@@ -270,7 +272,7 @@ button {
 .salvar {
   margin: 8px;
   margin-left: 410px;
-  background-color:  #467dff;
+  background-color: #467dff;
   color: white;
 }
 
@@ -367,5 +369,3 @@ button {
   margin-top: 10px;
   color: white;
 }
-
- 
